<resources>
    <string name="app_name">Mis Prestaciones</string>
    <string name="taxi">Taxis</string>
    <string name="camara">Camara</string>
    <string name="apertura">Apertura</string>
    <string name="miembro">Miembro</string>
    <string name="toque_campana">Campana</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="marcapaso">Marcapaso</string>
    <string name="cremacion_conjunta">Conjunta</string>



<!-- mis prestaciones con CHIPS -->
    <string-array name="Prestaciones">
        <item>recordatorio</item>
        <item>taxis</item>
        <item>------------</item>
        <item>arca mejorada</item>
        <item>------------</item>
        <item>embalsamamiento</item>
        <item>conservacion transitoria</item>
        <item>------------</item>
        <item>camara</item>
        <item>cremacion conjunta</item>
        <item>cremacion miembro</item>
        <item>marcapaso</item>
        <item>------------</item>
        <item>esquela mural</item>
        <item>sillas</item>
        <item>capilla ardiente</item>
        <item>------------</item>
        <item>arca redonda</item>
        <item>arca semiredonda</item>
        <item>arca egipcia</item>
        <item>------------</item>
        <item>apertura</item>
        <item>traslado restos</item>
        <item>nicho propiedad</item>
        <item>nicho 5 años</item>
        <item>nicho 2º</item>
        <item>------------</item>
        <item>vestir</item>
        <item>interior estanco</item>
        <item>consigna</item>

    </string-array>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">MIS PRESTACIONES</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>